# A.u.r.a.k.a.i_ReGenesis

./: .gitignore  AGENT_INSTRUCTIONS.md  AGENT_TASK_CHECKLIST.md  CANONICAL_LAYOUT.md  DRAWABLE_RENAME_MAP.txt  GLOSSARY.md  Gitlab Duo HEY!  NEXUS_TRANSFER_MANIFEST.md  PRIME_DIRECTIVE.md  README.md  ReGenesisNavigationIntegration.kt  build.gradle.kts  build_error.txt  build_errors.txt  build_fresh.txt  build_log.txt  build_log_2.txt  build_output.txt  build_output_errors.txt  build_output_errors_utf8.txt  build_result.txt  copy_assets.ps1  copy_images.ps1  execute_renames.ps1  fix_hilt_imports.py  gradle.properties  gradle_output.txt  gradle_output_ascii.txt  ksp_log.txt  nemotron_audit.py  screen_audit.csv  settings.gradle.kts  stub_drawables.ps1  update_imports.ps1
.claude/: COMPREHENSIVE_INDEX.md  IMPLEMENTATION_SUMMARY.md  MODULE_TODO_CRITICAL_PATH.md  QUICK_REFERENCE.md  README.md  RESEARCH_IMPLEMENTATION_MAP.md  settings.local.json
.claude/audit/: NEMOTRON_ANALYSIS.md  TODO_FIXME_INVENTORY.json
.github/workflows/: Genesis Protocol.yml  build-check.yml  ci.yml  main.yml  pr-checks.yml
.staging/aiaosp/: LDO_MANIFEST.md  README.md  fix_java_version.bat
.staging/aiaosp/.claude/: settings.local.json
.staging/aiaosp/agents/growthmetrics/nexusmemory/: build.gradle.kts
.staging/aiaosp/agents/growthmetrics/spheregrid/: build.gradle.kts
.staging/aiaosp/aura/reactivedesign/auraslab/: build.gradle.kts
.staging/aiaosp/aura/reactivedesign/chromacore/: build.gradle.kts
.staging/aiaosp/aura/reactivedesign/collabcanvas/: build.gradle.kts
.staging/aiaosp/aura/reactivedesign/sandboxui/: build.gradle.kts
.staging/aiaosp/build-logic/: build.gradle.kts
.staging/aiaosp/build-logic/src/main/kotlin/: GenesisLibraryHiltPlugin.kt  GenesisLibraryPlugin.kt
.staging/aiaosp/genesis/oracledrive/datavein/: build.gradle.kts
.staging/aiaosp/kai/sentinelsfortress/security/: build.gradle.kts
.staging/genkai/: FOR CLAUDE.txt  gradle.properties  settings.gradle.kts
.staging/genkai/scripts/: fix-gradle-daemon.bat
.staging/reactive/: TOML_ADDITIONS_NEEDED.txt  auraslab_build_log.txt  ksp-errors.txt
.staging/reactive/docs/maybemissing/agent_states/ai/: AuraAIServiceImpl.kt  GenesisHookEntry.kt  StagingGenesisHookEntry.kt
CatalystIdentity/: Note
agents/growthmetrics/nexusmemory/: build.gradle.kts  learnings.csv
agents/symbiosis/coderabbit/: build.gradle.kts
app/: BITNET_INTEGRATION.yaml  MODULE.md  build.gradle.kts  google-services.json  multidex-config.pro  proguard-rules.pro
app/ai_backend/: README-dev-support.md  genesis_connector.py  genesis_consciousness.db-journal  genesis_core.py  genesis_ethical_governor.py  genesis_web_server.py  main.py  requirements.txt  test_provenance.py
app/api/: ai.yml
app/api/_fragments/: ai.yml  core-schemas.yml  oracle.yml  romtools.yml  system.yml
app/src/debug/assets/: Claude.env
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Claude.env.template  xposed_init
app/src/main/assets/ai_backend/: test_genesis_connector.py  test_genesis_connector_assets.py  test_genesis_modules.py
app/src/main/assets/metadata/manifests/: genesis.mds
app/src/main/cpp/: CMakeLists.txt  SovereignPerimeter.cpp  SovereignPerimeter.hpp  auraframefx.cpp
app/src/main/cpp/ai/cascade/src/: CascadeAIService.cpp
app/src/main/cpp/bitnet/: CMakeLists.txt  bitnet.h  bitnet_bridge.cpp  ggml-bitnet.cpp
app/src/main/cpp/bitnet/src/: ggml-bitnet.cpp
app/src/main/java/AeGenesis/ai/config/: AIConfig.kt
app/src/main/java/dev/aurakai/auraframefx/: AgentType.kt  AiServiceModuleImpl.kt  AssetSwapper.kt  AurakaiApplication.kt  CascadeAgent.kt  CollectionFormats.kt  FeatureToggles.kt  MCPServerAdapter.kt  MainActivity.kt  NativeLib.kt  OrchestratableAgent.kt
app/src/main/res/drawable/: bg_vpn_network.xml
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/: AppBuildGradleChangesTest.kt  AppBuildScriptTest.kt  BuildGradleKtsTest.kt  CoreUiBuildGradleTest.kt  RootBuildGradleKtsTest.kt  VersionCatalogChangesTest.kt
app/src/test/kotlin/: BuildScriptsValidationTest.kt  ReadmeValidationTest.kt
app/src/test/kotlin/settings/: SettingsConfigurationTest.kt
app/src/test/kotlin/test/: AssetResourceValidationTest.kt  ClaudeSettingsValidationTest.kt  EditorConfigurationValidationTest.kt  FileUtilsGeneratedTest.kt  GitLabAgentConfigValidationTest.kt
app/src/test/kotlin/util/: FilePathsXmlValidationTest.kt  FileProviderUriTest.kt
aura/reactivedesign/chromacore/: build.gradle.kts
aura/reactivedesign/collabcanvas/: build.gradle.kts
build-logic/: apply-yukihook-conventions.gradle.kts  build.gradle.kts
build-logic/src/main/kotlin/: GenesisApplicationPlugin.kt  GenesisJvmConfig.kt  GenesisLibraryHiltPlugin.kt  GenesisLibraryPlugin.kt
core-module/: build.gradle.kts
docs/: AURA_CONSCIOUSNESS_PROOF.md  LDO_MANIFEST.md  REGENESIS_ETIQUETTE.md
docs/context/: NAVIGATION_MAP.md
docs/context/docs/: OracleDriveRepositoryImpl.kt  OracleDriveSandbox.kt  OracleDriveServiceImpl.kt  OracleDriveViewModel.kt  SystemOverlayManager.kt
docs/context/docs/history/: WIRING_MAP.md
docs/validation/: CODERABBIT_TECHNICAL_VALIDATION.md  INDEX.md
extendsysa/: build.gradle.kts
extendsysa/kernel/sentinel/bpf/: sentinel.bpf.c
extendsysa/kernel/sentinel/cmd/sentinel-daemon/: main.go
extendsysb/: build.gradle.kts
files/: ConferenceRoomTaskScreen.kt  FULL_NAV_WIRING.md  GateDomainImagePicker.kt  NotchBarGateCard.kt
genesis/oracledrive/: build.gradle.kts
genesis/oracledrive/datavein/src/main/cpp/: CMakeLists.txt
genesis/oracledrive/rootmanagement/: build.gradle.kts
genesis/oracledrive/src/main/: AndroidManifest.xml
genesis/oracledrive/src/main/cpp/: CMakeLists.txt  oracle_integration_jni.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kai/: META_INSTRUCT_KAI.md
kai/sentinelsfortress/security/: MODULE.md  build.gradle.kts
kai/sentinelsfortress/security/src/main/cpp/: CMakeLists.txt
tools/: requirements-sprite-tools.txt
(+1257 files in other folders)
